Extending null should set __proto__ to null https://bugs.webkit.org/show_bug.cgi?id=142882

Reviewed by Geoffrey Garen and Benjamin Poulain.

Source/JavaScriptCore:

Set Derived.prototype.__proto__ to null when extending null.

* bytecompiler/NodesCodegen.cpp:
(JSC::ClassExprNode::emitBytecode):

LayoutTests:

Added more test cases for extending from null, and added checks for prototypes.

Also rebaselined existing tests.

* js/class-syntax-call-expected.txt:
* js/class-syntax-extends-expected.txt:
* js/class-syntax-super-expected.txt:
* js/script-tests/class-syntax-call.js:
* js/script-tests/class-syntax-extends.js:
* js/script-tests/class-syntax-super.js:


Canonical link: https://commits.webkit.org/161271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182171 268f45cc-cd09-0410-ab3c-d52691b4dbfc