LayoutTests/js/script-tests/class-syntax-extends.js
@@ -16,7 +16,10 @@ class Derived extends Base {
 }
 
 shouldBeTrue('(new Base) instanceof Base');
+shouldBe('Object.getPrototypeOf(new Base)', 'Base.prototype');
 shouldBeTrue('(new Derived) instanceof Derived');
+shouldBe('Object.getPrototypeOf(new Derived)', 'Derived.prototype');
+shouldBe('Object.getPrototypeOf(Derived.prototype)', 'Base.prototype');
 shouldBe('(new Derived).baseMethod()', '"base"');
 shouldBe('(new Derived).overridenMethod()', '"derived"');
 shouldBe('Derived.staticBaseMethod()', '"base"');
@@ -28,7 +31,9 @@ shouldThrow('x = class extends Base {', '"SyntaxError: Unexpected end of script"
 shouldNotThrow('x = class extends Base { }');
 shouldNotThrow('x = class extends Base { constructor() { } }');
 shouldBe('x.__proto__', 'Base');
+shouldBe('Object.getPrototypeOf(x)', 'Base');
 shouldBe('x.prototype.__proto__', 'Base.prototype');
+shouldBe('Object.getPrototypeOf(x.prototype)', 'Base.prototype');
 shouldBe('x = class extends null { constructor() { } }; x.__proto__', 'Function.prototype');
 shouldBe('x.__proto__', 'Function.prototype');
 shouldThrow('x = class extends 3 { constructor() { } }; x.__proto__', '"TypeError: The superclass is not an object."');
@@ -62,5 +67,21 @@ shouldThrow('namespace = {}; namespace.A = class { constructor() { } }; namespac
 shouldThrow('namespace = {}; namespace.A = class { constructor() { } }; namespace.B = class extends new namespace.A() { constructor() { } }');
 shouldBe('x = 1; namespace = {}; namespace.A = class { constructor() { } }; try { namespace.B = class extends (x++, namespace.A) { constructor() { } } } catch (e) { } x', '2');
 shouldBe('x = 1; namespace = {}; namespace.A = class { constructor() { } }; try { namespace.B = class extends (namespace.A, x++) { constructor() { } } } catch (e) { } x', '2');
+
+shouldBe('Object.getPrototypeOf((class { constructor () { } }).prototype)', 'Object.prototype');
+shouldBe('Object.getPrototypeOf((class extends null { constructor () { super(); } }).prototype)', 'null');
+shouldThrow('new (class extends undefined { constructor () { this } })', '"ReferenceError: Cannot access uninitialized variable."');
+shouldThrow('new (class extends undefined { constructor () { super(); } })', '"TypeError: undefined is not an object (evaluating \'super()\')"');
+shouldBe('x = {}; new (class extends undefined { constructor () { return x; } })', 'x');
+shouldThrow('y = 12; new (class extends undefined { constructor () { return y; } })', '"TypeError: Cannot return a non-object type in the constructor of a derived class."');
+shouldBeTrue ('class x {}; new (class extends null { constructor () { return new x; } }) instanceof x');
+shouldThrow('new (class extends null { constructor () { this; } })', '"ReferenceError: Cannot access uninitialized variable."');
+shouldThrow('new (class extends null { constructor () { super(); } })', '"TypeError: undefined is not an object (evaluating \'super()\')"');
+shouldBe('x = {}; new (class extends null { constructor () { return x } })', 'x');
+shouldThrow('y = 12; new (class extends null { constructor () { return y; } })', '"TypeError: Cannot return a non-object type in the constructor of a derived class."');
+shouldBeTrue ('class x {}; new (class extends null { constructor () { return new x; } }) instanceof x');
+shouldBe('x = null; Object.getPrototypeOf((class extends x { }).prototype)', 'null');
+shouldBeTrue('Object.prototype.isPrototypeOf(class { })');
+shouldBeTrue('Function.prototype.isPrototypeOf(class { })');
 
 var successfullyParsed = true;
